--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,23 +10,20 @@ body
  #cabecera
  {
 background: #33f;
-box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+box-shadow: 20px 30px 20px 0px rgba(0,0,0,0.5);
 color: white;
 font-weight: bold;
 margin: 0;
-padding: 0.5em;
-
-
-
-
-
- }
+padding: 1em;
+font-size: 40px;
+}
  #cabecera #tagline
  {
      padding: 0 0 0 1em;
      font-weight: normal;
-     font-size: 0.8em;
+     font-size: 1em;
  }
+
 #container
 {
     width: 70%;
@@ -37,9 +34,12 @@ padding: 0.5em;
 }
 #container h1
 {
-   font-size: 20px;
+   font-size: 50px;
+   color: sienna;
+   text-decoration: underline;
 }
 #post
 {
     padding: 1em;
+    color: #33f;
 }
